--- a/layout/main.handlebars
+++ b/layout/main.handlebars
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/f1687098ab.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <title>EZTravelPlanner</title>
+    <title>EZ-TravelPlanner</title>
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="/assets/js/cats.js"></script>
 </head>
