--- a/layout/kate_working/index.html
+++ b/layout/kate_working/index.html
@@ -17,7 +17,11 @@
   </head>
 
   <body>
-    <nav class="nav-extended" style="background-color: grey;">
+    <nav
+      class="nav-extended"
+      style="background-color: grey; opacity: 95%;"
+      class="menu"
+    >
       <div class="nav-wrapper" style="height: 1rem;">
         <a href="#" class="brand-logo"> </a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"
@@ -54,7 +58,12 @@
       </div>
     </nav>
 
-    <footer id="footer" class="page-footer" style="background-color: grey;">
+    <footer
+      id="footer"
+      class="page-footer"
+      style="background-color: grey; opacity: 95%; height: 8rem; padding-top: 0%;"
+      class="menu"
+    >
       <div class="container">
         <div class="row">
           <div class="col l6 s12"></div>
