--- a/layout/main.handlebars
+++ b/layout/main.handlebars
@@ -13,49 +13,46 @@
 </head>
 
 <body>
-    <div class="row">
-        <div class="col s12">
-            <ul class="tabs">
-                <li class="tab col s3"><a href="#test1">Test 1</a></li>
-                <li class="tab col s3"><a class="active" href="#test2">Test 2</a></li>
-                <li class="tab col s3 disabled"><a href="#test3">Disabled Tab</a></li>
-                <li class="tab col s3"><a href="#test4">Test 4</a></li>
+    <nav class="nav-extended" style="background-color: grey;">
+        <div class="nav-wrapper" style="height: 1rem;">
+            <a href="#" class="brand-logo"> </a>
+            <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        </div>
+        <div class="nav-content">
+            <ul class="tabs tabs-transparent">
+                <li class="tab">
+                    <a href="#test1"><i class="fas fa-globe-americas" style="padding-right: 2rem;"></i>Home</a>
+                </li>
+                <li class="tab">
+                    <a class="active" href="#test2"><i class="fas fa-route" style="padding-right:2rem;"></i>Active
+                        <br /></a>
+                </li>
+                <li class="tab disabled">
+                    <a href="#test3"><i class="fas fa-plane" style="padding-right: 2rem;"></i>Upcoming/Past Trips</a>
+                </li>
+                <li class="tab">
+                    <a href="#test4"><i class="fas fa-calendar-alt" style="padding-right: 2rem;"></i>Calendar</a>
+                </li>
             </ul>
         </div>
-        <div id="test1" class="col s12">Test 1</div>
-        <div id="test2" class="col s12">Test 2</div>
-        <div id="test3" class="col s12">Test 3</div>
-        <div id="test4" class="col s12">Test 4</div>
-    </div>
+    </nav>
 
     {{{ body }}}
 
-    <footer class="page-footer">
+    <footer id="footer" class="page-footer" style="background-color: grey;">
         <div class="container">
             <div class="row">
-                <div class="col l6 s12">
-                    <h5 class="white-text">Footer Content</h5>
-                    <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer
-                        content.</p>
-                </div>
-                <div class="col l4 offset-l2 s12">
-                    <h5 class="white-text">Links</h5>
-                    <ul>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-                    </ul>
-                </div>
+                <div class="col l6 s12"></div>
+                <div class="col l4 offset-l2 s12"></div>
             </div>
         </div>
         <div class="footer-copyright">
-            <div class="container">
+            <div class="container" style="align-items: center;">
                 © 2014 Copyright Text
-                <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
             </div>
         </div>
     </footer>
+
 </body>
 
 </html>
