adjusted kate files, picture, added potential name

--- a/layout/kate_working/index.html
+++ b/layout/kate_working/index.html
@@ -12,20 +12,20 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <title>EZ-TravelPlanner</title>
+    <title>all.location-TravelPlanner</title>
     <script src="https://code.jquery.com/jquery.js"></script>
   </head>
 
   <body>
     <nav
       class="nav-extended"
-      style="background-color: grey; opacity: 95%;"
+      style="background-color: rgb(182, 181, 181);"
       class="menu"
     >
       <div class="nav-wrapper" style="height: 1rem;">
         <a href="#" class="brand-logo"> </a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"
-          ><i class="material-icons">menu</i></a
+          ><i class="material-icons" style="float: right;">all.location</i></a
         >
       </div>
       <div class="nav-content">
@@ -37,12 +37,12 @@
             >
           </li>
           <li class="tab">
-            <a class="active" href="#test2"
+            <a  href="#test2"
               ><i class="fas fa-route" style="padding-right:2rem;"></i>Active
               <br
             /></a>
           </li>
-          <li class="tab disabled">
+          <li class="tab">
             <a href="#test3"
               ><i class="fas fa-plane" style="padding-right: 2rem;"></i
               >Upcoming/Past Trips</a
@@ -54,6 +54,10 @@
               >Calendar</a
             >
           </li>
+          <li  class="logo" style="float: right; padding-right: 3rem; font-size: 24pt; color:rgb(14, 129, 236); font-family: fantasy;">
+            </i>alLocation: travel/budget/planner</a
+            >
+          </li>
         </ul>
       </div>
     </nav>
@@ -61,7 +65,7 @@
     <footer
       id="footer"
       class="page-footer"
-      style="background-color: grey; opacity: 95%; height: 8rem; padding-top: 0%;"
+      style="background-color: rgb(182, 181, 181); opacity: 95%; height: 8rem; padding-bottom: 0%; padding-top: 0%;"
       class="menu"
     >
       <div class="container">
