updated calendar file

--- a/views/calendar.handlebars
+++ b/views/calendar.handlebars
@@ -1,58 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-
-    <link rel="stylesheet" href="css/style.css">
-
-    <link rel="stylesheet" href="css/style.css">
-
-    <link rel="stylesheet" href="css/style.css">
-
-    <script src="js/caleandar.js"></script>
-    <title>Document</title>
-</head>
-<body>
-
-<div id="caleandar">
-
+<div id="calendar">
 </div>
-
-<!-- {{!-- var events = [
-    {'Date': new Date(2016, 6, 7), 'Title': 'Doctor appointment at 3:25pm.'},
-    {'Date': new Date(2016, 6, 18), 'Title': 'New Garfield movie comes out!', 'Link': 'https://garfield.com'},
-    {'Date': new Date(2016, 6, 27), 'Title': '25 year anniversary', 'Link': 'https://www.google.com.au/#q=anniversary+gifts'},
-]; --}}
-
-{{!-- var settings = {
-    Color: '',
-
-    LinkColor: '',
-
-    NavShow: true,
-
-    NavVertical: false,
-    NavLocation: '',
-
-    DateTimeShow: true,
-
-    DateTimeFormat: 'mmm, yyyy',
-
-    DatetimeLocation: '',
-    EventClick: '',
-    EventTargetWholeDay: false,
-
-    DisabledDays: [],
-    ModelChange: model
-}; --}}
-
-{{!-- var element = document.getElementById('caleandar');
-caleandar(element, events, settings); --}} -->
-
-
-
-</body>
-</html>
