--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <title>EZ-TravelPlanner</title>
     <script src="https://code.jquery.com/jquery.js"></script>
-    <script src="/assets/js/cats.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
+
+    <link rel="stylesheet" href="css/styles.css">
+
+    <link rel="stylesheet" href="css/styles.css">
+
+    <script src="js/calendar.js"></script>
 </head>
 
 <body>
