--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,13 +9,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <title>EZ-TravelPlanner</title>
     <script src="https://code.jquery.com/jquery.js"></script>
-    <link rel="stylesheet" href="css/styles.css">
 
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="../../public/css/styles.css">
 
-    <link rel="stylesheet" href="css/styles.css">
-
-    <script src="js/calendar.js"></script>
+    <script src="../../public/js/calendar.js"></script>
 </head>
 
 <body>
