--- a/views/newbudget.handlebars
+++ b/views/newbudget.handlebars
@@ -1,54 +1,126 @@
-<div class="row" style="background: grey; padding: 5rem; margin: 5rem;">
+<div class="row" style="background:black; padding: 5rem; margin: 3rem; border-radius:6px;">
     <form class="col s12">
         <div class="row">
-            <div class="input-field col s6">
-                <input id="first_name" type="text" class="validate">
-                <label for="first_name">Name:</label>
+            <h5 style="color: grey;">New Trip Form:</h5>
+        </div>
+        <div class="row">
+            <div class="input-field col s4" class="form-group">
+                <input id="budget" type="text" class="validate">
+                <label for="budget">Name:</label>
             </div>
-            <div class="input-field col s6">
-                <input id="last_name" type="text" class="validate">
-                <label for="last_name">Destination:</label>
+            <div class="input-field col s4">
+                <input id="budget" type="text" class="validate">
+                <label for="budget">Destination:</label>
+            </div>
+            <div class="input-field col s4">
+                <div id="calculator" class="back">
+                    <div><input class="input" type="text" id="input" value="0" readonly="readonly"> </div>
+                    <div id="keys" class="keys">
+                        <button onClick="Clear()">AC</button>
+                        <button onClick="DEL()">DEL</button>
+                        <button onClick="calculator1()">%</button>
+                        <button onClick="calculator1()">/</button>
+                        <button onClick="calculator()">7</button>
+                        <button onClick="calculator()">8</button>
+                        <button onClick="calculator()">9</button>
+                        <button onClick="calculator1()">+</button>
+                        <button onClick="calculator()">4</button>
+                        <button onClick="calculator()">5</button>
+                        <button onClick="calculator()">6</button>
+                        <button onClick="calculator1()">-</button>
+                        <button onClick="calculator()">1</button>
+                        <button onClick="calculator()">2</button>
+                        <button onClick="calculator()">3</button>
+                        <button onClick="calculator1()">*</button>
+                        <button onClick="zero()">0</button>
+                        <button onClick="dot()">.</button>
+                        <button onClick="dzero()">00</button>
+                        <button onClick="resultcalculator()">=</button>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row">
-            <div class="input-field col s6">
-                <input id="first_name" type="text" class="validate">
-                <label for="first_name">Flights:</label>
+            <div class="input-field col s7">
+                <input id="budget" type="text" class="validate">
+                <label for="budget">Flight Info:</label>
             </div>
-            <div class="input-field col s6">
-                <input id="last_name" type="text" class="validate">
-                <label for="last_name">Breakfast:</label>
+            <div class="input-field col s1">
+                <input id="budget" type="text" class="validate">
+                <label for="last_name">#Days:</label>
+            </div>
+            <div class="input-field col s4" class="input">
+                <label for="budget">Compare City Costs:</label><br><br>
+                <input id="budget" type="input" class="validate">
+                <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Search</a>
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <h4>Content from cities_db</h4>
+                        <p>City info:</p>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row">
-            <div class="input-field col s6">
-                <input id="first_name" type="text" class="validate">
-                <label for="first_name">Lunch:</label>
+            <div class="input-field col s4">
+                <input id="budget" type="text" class="validate">
+                <label for="budget">Flight$:</label>
             </div>
-            <div class="input-field col s6">
-                <input id="last_name" type="text" class="validate">
+            <div class="input-field col s4">
+                <input id="budget" type="text" class="validate">
+                <label for="budget">Hotel$:</label>
+            </div>
+
+
+        </div>
+        <div class="row">
+            <div class="input-field col s4">
+                <input id="budget" type="text" class="validate">
+                <label for="budget">Breakfast:</label>
+            </div>
+            <div class="input-field col s4">
+                <input id="budget" type="text" class="validate">
+                <label for="budget">Lunch:</label>
+            </div>
+            <div class="input-field col s4">
+                <input id="budget" type="text" class="validate">
                 <label for="last_name">Dinner:</label>
             </div>
-            <div class="input-field col s6">
-                <input id="last_name" type="text" class="validate">
-                <label for="last_name">Transit:</label>
-            </div>
-            <div class="input-field col s6">
-                <input id="last_name" type="text" class="validate">
-                <label for="last_name">Car/Gas:</label>
-            </div>
-            <div class="input-field col s6">
-                <input id="last_name" type="text" class="validate">
-                <label for="last_name">Entertainment:</label>
-            </div>
-            <div class="input-field col s6">
-                <input id="last_name" type="text" class="validate">
-                <label for="last_name">Misc Cash:</label>
-            </div>
-            <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-                <i class="material-icons right"></i>
-            </button>
         </div>
+        <div class="row">
+            <div class="input-field col s4">
+                <input id="budget" type="text" class="validate">
+                <label for="budget">Entertainment:</label>
+            </div>
+            <div class="input-field col s4">
+                <input id="budget" type="text" class="validate">
+                <label for="budget">Transportation:</label>
+            </div>
+            <div class="input-field col s4">
+                <input id="budget" type="text" class="validate">
+                <label for="last_name">Misc:</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s4">
+                <input id="budget" type="text" class="validate">
+                <label for="budget">Total Costs:</label>
+                <br>
+                <br>
+                <br>
+                <button2 class="btn waves-effect waves-light" type="submit" name="action">Submit
+                    <i class="material-icons right"><i class="fas fa-paper-plane"></i></i>
+                </button2>
+
+            </div>
+
+
+
+        </div>
+</div>
 </div>
 </div>
 </form>
