--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -38,7 +38,7 @@
             <li class="tab">
                 <a href="calendar"><i class="fas fa-calendar-alt" style="padding-right: 2rem;"></i>Calendar</a>
             </li>
-            <img src="../../public/assets/Untitled-3.jpg" alt="logo" style="float: right; padding-right: 5rem">
+            <img src="/assets/logo.jpg" alt="logo" style="float: right; padding-right: 5rem">
             {{!-- <li class="logo"
                 style="float: right; padding-right: 20rem; font-size: 16pt; color:black font-family: fantasy;">
 
