--- a/views/newbudget.handlebars
+++ b/views/newbudget.handlebars
@@ -1,6 +1,9 @@
 <div class="row" style="background:black; padding: 5rem; margin: 3rem; border-radius:6px;">
     <form class="col s12">
         <div class="row">
+            <h1>
+                {{test}}
+            </h1>
             <h5 style="color: grey;">New Trip Form:</h5>
         </div>
         <div class="row">
@@ -125,3 +128,4 @@
 </div>
 </form>
 </div>
+<script src="/js/newbudget.js"></script>
