working calc, updated some format

--- a/views/newbudget.handlebars
+++ b/views/newbudget.handlebars
@@ -1,10 +1,8 @@
-<div class="row" style="background:black; padding: 5rem; margin: 3rem; border-radius:6px;">
+<div class="row" style="background:grey; padding: 5rem; margin: 3rem; border-radius:6px;">
     <form class="col s12">
         <div class="row">
-            <h1>
-                {{test}}
-            </h1>
-            <h5 style="color: grey;">New Trip Form:</h5>
+
+            <h5 style="color: white;">New Trip Form:</h5>
         </div>
         <div class="row">
             <div class="input-field col s4" class="form-group">
@@ -82,48 +80,40 @@
         <div class="row">
             <div class="input-field col s4">
                 <input id="budget" type="text" class="validate">
-                <label for="budget">Breakfast:</label>
+                <label for="budget">Meals:</label>
             </div>
-            <div class="input-field col s4">
-                <input id="budget" type="text" class="validate">
-                <label for="budget">Lunch:</label>
+
+            <div class="row">
+                <div class="input-field col s4">
+                    <input id="budget" type="text" class="validate">
+                    <label for="budget">Entertainment:</label>
+                </div>
+                <div class="input-field col s4">
+                    <input id="budget" type="text" class="validate">
+                    <label for="budget">Transportation:</label>
+                </div>
+                <div class="input-field col s4">
+                    <input id="budget" type="text" class="validate">
+                    <label for="last_name">Misc:</label>
+                </div>
             </div>
-            <div class="input-field col s4">
-                <input id="budget" type="text" class="validate">
-                <label for="last_name">Dinner:</label>
+            <div class="row">
+                <div class="input-field col s4">
+                    <input id="budget" type="text" class="validate">
+                    <label for="budget">Total Costs:</label>
+                    <br>
+                    <br>
+                    <br>
+                    <button2 class="btn waves-effect waves-light" type="submit" name="action">Submit
+                        <i class="material-icons right"><i class="fas fa-paper-plane"></i></i>
+                    </button2>
+
+                </div>
+
+
+
             </div>
         </div>
-        <div class="row">
-            <div class="input-field col s4">
-                <input id="budget" type="text" class="validate">
-                <label for="budget">Entertainment:</label>
-            </div>
-            <div class="input-field col s4">
-                <input id="budget" type="text" class="validate">
-                <label for="budget">Transportation:</label>
-            </div>
-            <div class="input-field col s4">
-                <input id="budget" type="text" class="validate">
-                <label for="last_name">Misc:</label>
-            </div>
-        </div>
-        <div class="row">
-            <div class="input-field col s4">
-                <input id="budget" type="text" class="validate">
-                <label for="budget">Total Costs:</label>
-                <br>
-                <br>
-                <br>
-                <button2 class="btn waves-effect waves-light" type="submit" name="action">Submit
-                    <i class="material-icons right"><i class="fas fa-paper-plane"></i></i>
-                </button2>
-
-            </div>
-
-
-
-        </div>
-</div>
 </div>
 </div>
 </form>
