--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,18 +8,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <title>al.location-TravelPlanner</title>
     <script src="https://code.jquery.com/jquery.js"></script>
-<<<<<<< HEAD
     <link rel="stylesheet" href="css/styles.css" type="text/css" />
-=======
->>>>>>> 1174dd247adb04d32560e00de8513430b8268f6c
 
     <link rel="stylesheet" href="../../public/css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 
     <script src="../../public/js/calendar.js"></script>
-<<<<<<< HEAD
     <script src="../../public/js/newbudget.js"></script>
-=======
->>>>>>> 1174dd247adb04d32560e00de8513430b8268f6c
 </head>
 
 
@@ -44,7 +39,7 @@
             <li class="tab">
                 <a href="calendar"><i class="fas fa-calendar-alt" style="padding-right: 2rem;"></i>Calendar</a>
             </li>
-            <img src="/assets/logo.jpg" alt="logo" style="float: right; padding-right: 5rem">
+            <img src="/assets/logo.png" alt="logo" style="float: right; padding-right: 3rem; top: -5rem">
             {{!-- <li class="logo"
                 style="float: right; padding-right: 20rem; font-size: 16pt; color:black font-family: fantasy;">
 
