--- a/views/pasttrip.handlebars
+++ b/views/pasttrip.handlebars
@@ -1,4 +1,5 @@
-<table>
+<table style="background:grey; opacity:80% ; margin: 2rem; width: 95%">
+    {{trip_db}}
     <thead>
         <tr>
             <th>Name</th>
