--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,6 +11,14 @@ a {
   padding: 5rem;
 }
 
+#f1 {
+  font-family: "Oxygen", sans-serif;
+}
+
+#f2 {
+  font-family: "Raleway", sans-serif;
+}
+
 main {
   flex: 1 0 auto;
 }
