changes made to config file

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,8 +8,8 @@
             </div>
             <div style="color: white; font-size:large">
                 <a href="#">Start New Trip</a>
-                <a href="#">Current Trip</a>
-                <a href="#">View Upcoming</a>
+                <a href="newbudget">Current Trip</a>
+                <a href="pasttrip">View Upcoming</a>
             </div>
         </div>
     </div>
