--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -69,7 +69,7 @@ li {
   text-align: center;
   list-style-type: none;
 }
-
+/* 
 li:nth-child(n + 1):nth-child(-n + 7) {
   font-weight: 900;
   color: rgb(87, 83, 83);
@@ -86,7 +86,7 @@ li:nth-child(17) {
   border-radius: 5px;
   background-color: #1abc9c;
   color: #ecf0f1;
-}
+} */
 
 .back {
   width: 248px;
