--- a/views/newbudget.handlebars
+++ b/views/newbudget.handlebars
@@ -1,13 +1,14 @@
-<div class="row" style="background:grey; padding: 5rem; padding-bottom:0rem; margin: 3rem; border-radius:6px;">
-
-    <form class="col s12">
-        <h6 id="f1" style="color: white;">New Trip Form:</h6>
+<div class="row"
+    style="background:grey; padding: 5rem; padding-bottom:0rem; margin: 3rem; border-radius:6px; opacity: 95%">
+    <form class="col s12" id="newTripForm">
+        <h6 style="color: white;">New Trip Form:</h6>
         <div class="row">
-
             <br>
             <div class="input-field col s6">
-                <img src="/assets/journal.png" alt="journal">
+                <img src="/assets/journal.png" alt="journal" style="height: 358px;">
             </div>
+
+
             <div class="input-field col s4">
                 <div id="calculator" class="back">
                     <div><input class="input" type="text" id="input" value="0" readonly="readonly"> </div>
@@ -34,42 +35,25 @@
                         <button onClick="resultcalculator()">=</button>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div>
-            <label for="meeting">Departure: </label><input id="departure" type="date" value="choose departure" />
-            <label for="meeting">Return: </label><input id="return" type="date" value="choose return" />
-        </div>
-        <br>
-        <br>
-        <div class="row" style="color: black;">
-            <div class="input-field col s4" class="form-group">
-                <input id="budget" type="text" class="validate">
-                <label for="budget">Name:</label>
-            </div>
-            <div class="input-field col s4">
-                <input id="budget" type="text" class="validate">
-                <label for="budget">Destination:</label>
-            </div>
-            <div class="input-field col s4" class="input">
-                <label for="budget">Compare Cities:</label><br><br>
-                <input id="budget" type="input" class="validate">
-                <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Search</a>
-                <div id="modal1" class="modal">
-                    <div class="modal-content">
-                        <h4>Content from cities_db</h4>
-                        <p>City info:</p>
-                    </div>
-                    <div class="modal-footer">
+
+
+                {{!-- <div class="modal-footer">
                         <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
-                    </div>
-                </div>
+                    </div> --}}
             </div>
+        </div>
+        <div class="row" style="color: black;">
+            <div>
+                <label for="meeting">Departure: </label><input id="departure" type="date" value="choose departure" />
+                <label for="meeting">Return: </label><input id="return" type="date" value="choose return" />
+
+            </div>
+
         </div>
         <div class="row">
             <div class="input-field col s6">
-                <input id="budget" type="text" class="validate">
-                <label for="budget">Flight Info:</label>
+                <input id="flightcost" type="text" class="validate">
+                <label for="flightcost">Flight Info:</label>
             </div>
             <div class="input-field col s6">
                 <input id="budget" type="text" class="validate">
@@ -81,54 +65,64 @@
                 <input id="budget" type="text" class="validate">
                 <label for="budget">Meals:</label>
             </div>
-            <div class="input-field col s6">
-                <input id="budget" type="text" class="validate">
-                <label for="budget">Entertainment:</label>
+            <div class="input-field col s4">
+                <input id="entertainment" type="text" class="validate">
+                <label for="entertainment">Entertainment:</label>
             </div>
-
 
         </div>
         <div class="row">
             <div class="input-field col s6">
-                <input id="budget" type="text" class="validate">
-                <label for="budget">Transportation:</label>
+                <input id="transport" type="text" class="validate">
+                <label for="transport">Transportation:</label>
             </div>
             <div class="input-field col s6">
                 <input id="budget" type="text" class="validate">
                 <label for="budget">Car/Gas:</label>
-
             </div>
         </div>
         <div class="row">
             <div class="input-field col s6">
-                <input id="budget" type="text" class="validate">
-                <label for="budget">Tips:</label>
+                <input id="tips" type="text" class="validate">
+                <label for="tips">Tips:</label>
             </div>
             <div class="input-field col s6">
-                <input id="budget" type="text" class="validate">
-                <label for="budget">Misc:</label>
-
+                <input id="misc" type="text" class="validate">
+                <label for="misc">Misc:</label>
             </div>
         </div>
 
+        <div class="input-field col s4" class="input">
+            <label for="city">Compare City Costs:</label><br><br>
+            <input id="city" type="input" class="validate">
+            <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Search</a>
+            <div id="modal1" class="modal">
+                <div class="modal-content">
+                    <h4>Content from cities_db</h4>
+                    <p>City info:</p>
+                </div>
+            </div>
+        </div>
         <div class="row">
             <div class="input-field col s6">
-                <input id="budget" type="text" class="validate">
-                <label for="budget">Total Costs:</label>
+                <input id="totalbudget" type="text" class="validate">
+                <label for="totalbudget">Total Cost:</label>
                 <br>
                 <br>
                 <br>
-                <button2 class="btn waves-effect waves-light" type="submit" name="action">Submit
+                <button2 class="btn waves-effect waves-light" type="submit" style="float: right;">Submit
                     <i class="material-icons right"><i class="fas fa-paper-plane"></i></i>
                 </button2>
-
             </div>
 
 
-
         </div>
+
 </div>
+</form>
+</div>
+<script src="/js/newbudget.js">
+</script>
 
 </form>
 </div>
-<script src="/js/newbudget.js"></script>
