fixed some things in newbudget

--- a/views/newbudget.handlebars
+++ b/views/newbudget.handlebars
@@ -56,14 +56,14 @@
                 <label for="flightcost">Flight Info:</label>
             </div>
             <div class="input-field col s6">
-                <input id="budget" type="text" class="validate">
-                <label for="last_name">Hotel Info:</label>
+                <input id="hotelcost" type="text" class="validate">
+                <label for="hotelcost">Hotel Info:</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s6">
-                <input id="budget" type="text" class="validate">
-                <label for="budget">Meals:</label>
+                <input id="mealcost" type="text" class="validate">
+                <label for="mealcost">Meals:</label>
             </div>
             <div class="input-field col s4">
                 <input id="entertainment" type="text" class="validate">
@@ -77,8 +77,8 @@
                 <label for="transport">Transportation:</label>
             </div>
             <div class="input-field col s6">
-                <input id="budget" type="text" class="validate">
-                <label for="budget">Car/Gas:</label>
+                <input id="car" type="text" class="validate">
+                <label for="car">Car/Gas:</label>
             </div>
         </div>
         <div class="row">
@@ -121,8 +121,7 @@
 </div>
 </form>
 </div>
-<script src="/js/newbudget.js">
-</script>
+
 
 </form>
 </div>
