--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,11 +5,8 @@
                 <span class="card-title" style="margin: 20rem; padding-top: 10rem"></span>
                 <p style="font-size: 40px; background: white">Welcome!</p>
                 <p style="font-size: 20pt;">What would you like to do?</p>
-            </div>
-            <div style="color: white; font-size:large">
-                <a href="#">Start New Trip</a>
-                <a href="#">Current Trip</a>
-                <a href="#">View Upcoming</a>
+                <a href="newbudget">Start New Trip</a>
+                <a href="activetrip">View Current Trip</a>
             </div>
         </div>
     </div>
