--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -81,7 +81,7 @@
     </div>
     <div class="footer-copyright" style="min-height: 0rem;">
         <div class="container" style="align-items: center;">
-            © 2014 Copyright Text
+            © 2020 Ben Kate Nick Kyle
             <!-- <a class="grey-text text-lighten-4 right" href="#!">Cit</a> -->
         </div>
     </div>
