pdf writer added to submit onclick

--- a/views/newbudget.handlebars
+++ b/views/newbudget.handlebars
@@ -104,9 +104,9 @@
                     <br>
                     <br>
                     <br>
-                    <button2 class="btn waves-effect waves-light" type="submit">Submit
+                    <button class="btn waves-effect waves-light" type="submit" id="submitbtn">Submit
                         <i class="material-icons right"><i class="fas fa-paper-plane"></i></i>
-                    </button2>
+                    </button>
 
                 </div>
 
