writing data to db

--- a/views/activetrip.handlebars
+++ b/views/activetrip.handlebars
@@ -6,7 +6,9 @@
                 <p style="font-size: 20px;">Active Trip:</p>
                 <p style="font-size: 20pt;">edit?</p>
             </div>
-
+            <span id="test"></span>
         </div>
     </div>
 </div>
+
+<script src="/js/newbudget.js"></script>
