--- a/views/calendar.handlebars
+++ b/views/calendar.handlebars
@@ -24,4 +24,4 @@
             </div>
         </div>
     </div>
-    <script src="/public/js/calendar.js"></script>
+    <script src="/js/calendar.js"></script>
