--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,7 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
 
-    <script src="js/calendar.js"></script>
+    {{!-- <script src="js/calendar.js"></script> --}}
     <script src="/js/newbudget.js"></script>
     <script src="/js/active.js"></script>
     <script src="/js/past.js"></script>
