--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,8 +11,8 @@
                 <a href="newbudget">Current Trip</a>
                 <a href="pasttrip">View Upcoming</a>
 
-                <a href="newbudget">Start New Trip</a>
-                <a href="activetrip">View Current Trip</a>
+                {{!-- <a href="newbudget">Start New Trip</a>
+                <a href="activetrip">View Current Trip</a> --}}
 
             </div>
         </div>
