--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,7 +27,7 @@
 
     {{!-- <script src="js/calendar.js"></script> --}}
     <script src="/js/newbudget.js"></script>
-    <script src="/js/active.js"></script>
+    {{!-- <script src="/js/active.js"></script> --}}
     <script src="/js/past.js"></script>
 
 </head>
