--- a/views/calendar.handlebars
+++ b/views/calendar.handlebars
@@ -1,5 +1,5 @@
- <div class="container col-sm-4 col-md-7 col-lg-4 mt-5">
-        <h1>calender</h1>
+ <div class="container col-sm-3 col-md-8 col-lg- mt-8">
+        <h1>calendar</h1>
     
         <div class="card">
             <h3 class="card-header" id="monthAndYear">Month And Year</h3>
