--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,13 +7,9 @@
                 <p style="font-size: 20pt;">What would you like to do?</p>
             </div>
             <div style="color: white; font-size:large">
-                <a href="#">Start New Trip</a>
-                <a href="newbudget">Current Trip</a>
+                <a href="newbudget">Start New Trip</a>
+                <a href="activetrip">Current Trip</a>
                 <a href="pasttrip">View Upcoming</a>
-
-                {{!-- <a href="newbudget">Start New Trip</a>
-                <a href="activetrip">View Current Trip</a> --}}
-
             </div>
         </div>
     </div>
