--- a/views/newbudget.handlebars
+++ b/views/newbudget.handlebars
@@ -66,7 +66,11 @@
         <div class="row">
             <div class="input-field col s6">
                 <input id="flightinfo" type="text" class="validate">
-                <label style="color: white" for="flightinfo">Link your boarding pass here OR enter in flight number, gate, etc.</label>
+                <label style="color: white" for="flightinfo">Link your boarding pass here OR enter in flight info</label>
+            </div>
+            <div class="input-field col s6">
+                <input id="email" type="text" class="validate">
+                <label style="color: white" for="email">Enter your email address:</label>
             </div>
         </div>
         {{!-- <div class="row">
