nodemailer is confusing

--- a/views/activetrip.handlebars
+++ b/views/activetrip.handlebars
@@ -5,11 +5,11 @@
                 <span class="card-title" style="margin: 20rem; padding-top: 10rem"></span>
                 <p style="font-size: 20px;">Active Trip:</p>
             </div>
+            <div style="text-align: center; color: white" id="resDates"></div>
             <div style="text-align: center; color: white" id="resF"></div>
             <div style="text-align: center; color: white" id="resH"></div>
             <div style="text-align: center; color: white" id="resD"></div>
             <div style="text-align: center; color: white" id="resB"></div>
-            <div style="text-align: center; color: white" id="resE"></div>
             <br></br>
             <button id="emailBtn">Email</button>
         </div>
