--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -37,7 +37,7 @@
 <nav class="nav-extended" style="background-color: rgb(182, 181, 181); opacity: 90%" class="menu">
     <div class="nav-wrapper" style="height: 1rem;">
         <a href="../../public/assets/logo.png" class="brand-logo"> </a>
-        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons"
+        <a href="/" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons"
                 style="float: right;">al.location</i></a>
     </div>
     <div class="nav-content" id="f1" style="height:73px">
