--- a/views/activetrip.handlebars
+++ b/views/activetrip.handlebars
@@ -11,7 +11,7 @@
             <div style="text-align: center; color: white" id="resD"></div>
             <div style="text-align: center; color: white" id="resB"></div>
             <br></br>
-            <button id="emailBtn">Email</button>
+            <button class="btn waves-effect waves-light" style="text-align: center" id="emailBtn">Email</button>
         </div>
     </div>
 </div>
